# robotic_inspection

./: .gitignore  LICENSE  README.md
src/: dependencies.txt
src/abb_irb2600_12_165_moveit_config/: CMakeLists.txt  package.xml
src/abb_irb2600_12_165_moveit_config/launch/: default_warehouse_db.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  trajectory_execution.launch.xml
src/camera/: CMakeLists.txt  package.xml  setup.py
src/camera/src/camera/: camera.py  camera_localization.py  data_capture.py  test_clustering.py  test_localization.py
src/camera/tests/abb120/: BaseToFlange.csv
src/camera_calibration/: CMakeLists.txt  package.xml  setup.py
src/camera_calibration/src/camera_calibration/: __init__.py  bootstrap_camera.py
src/camera_localization/: CMakeLists.txt  package.xml  setup.py
src/camera_localization/config/: system.yaml
src/camera_localization/src/camera_localization/: bootstrap_camera.py  camera_localization.py
src/planning_tests/: CMakeLists.txt  package.xml  setup.py
src/planning_tests/src/planning_tests/: __init__.py  plan_p2p.py  test_icp.py  test_model.py
src/simulated_camera/: CMakeLists.txt  package.xml  setup.py
src/simulated_camera/src/simulated_camera/: simulated_camera.py
src/system/: CMakeLists.txt  package.xml  setup.py
src/system/config/: system.yaml
src/system/database_approach/database/: bbox.csv  tool0_T_camera.csv
src/system/database_approach/database/meshes/: camera_mount.stl  partA.stl  partA_orig.stl  partB.stl  partC.stl  partD.stl  spare_part.stl
src/system/database_approach/database/partA/: part_tf.csv  planned_camera_path.csv
src/system/database_approach/database/partB/: part_tf.csv  planned_camera_path.csv  state_space.csv
src/system/database_approach/database/partC/: part_tf.csv  planned_camera_path.csv  state_space.csv
src/system/database_approach/database/partD/: part_tf.csv  planned_camera_path.csv  state_space.csv  working.csv
src/system/database_approach/database/spare_part/: part_tf.csv  planned_camera_path.csv
src/system/database_old/: camera.xacro
src/system/database_old/meshes/: composite_mold.stl
src/system/database_old/solidworks/: realsense_abb.SLDPRT
src/system/launch/: aruco.launch  camera.launch  robotic_inspection.launch
src/system/src/system/: __init__.py  add_collision_objects.py  bootstrap.py  compute_eta_profile.py  compute_eta_time_profile.py  compute_path_length.py  environment.py  evaluate_cloud.py  generate_images.py  generate_repeatability_images.py  handteach.py  loop_main.py  main.py  main2.py  perception_utils.py  planning_utils.py  policy_trainer.py  search_environment.py  searches.py  stl_processing.py  test_mdp.py  variation_of_points.py
src/utilities/: CMakeLists.txt  package.xml  setup.py
src/utilities/config/: system.yaml
src/utilities/src/utilities/: __init__.py  filesystem_utils.py  get_fk.py  get_ik.py  move_robot.py  open3d_and_ros.py  robot_utils.py  visualizer.py  voxel_grid.py
